tests/toylang/pos/000069_cdrc2.toylang
program a = { if a + a then sleep else sleep; } .
