tests/toylang/neg/000536_mutation.toylang
program a = { a = a + a else; } .
